# sam-design-system

./: .eslintrc.json  .gitignore  .grenrc.json  .nvmrc  .prettierignore  .prettierrc  102.38d52638.iframe.bundle.js.LICENSE.txt  102.38d52638.iframe.bundle.js.map  102.5902714b.iframe.bundle.js.map  102.b8e0e5f8.iframe.bundle.js.map  102.e3b26974.iframe.bundle.js.map  102.e4d8bedd.iframe.bundle.js.map  114.4d7ae2bf.iframe.bundle.js  130.0d8a820b82eb6eab5df0.manager.bundle.js  130.87946f13ba8855512b4c.manager.bundle.js  130.d711e951a137616486f1.manager.bundle.js  130.df6463744389803b9df9.manager.bundle.js  135.6b8afa10.iframe.bundle.js  135.6b8afa10.iframe.bundle.js.LICENSE.txt  135.6b8afa10.iframe.bundle.js.map  135.b6a8837f.iframe.bundle.js  135.b6a8837f.iframe.bundle.js.map  147.f385bac1.iframe.bundle.js  1795.12a242b8.iframe.bundle.js  1795.5e73bece.iframe.bundle.js  1795.6f03abe0.iframe.bundle.js  1869.18856da0.iframe.bundle.js  1869.6111d7e7.iframe.bundle.js  1869.77746bfe.iframe.bundle.js  1869.79f8f83b.iframe.bundle.js  1869.904e3ee9.iframe.bundle.js  1869.de6cbebc.iframe.bundle.js  229.c2e69bbfc56d94970f08.manager.bundle.js  229.f74b250de86b9e4b817e.manager.bundle.js  259.0c7fc4a0.iframe.bundle.js  259.0c7fc4a0.iframe.bundle.js.map  259.4b4fbb95.iframe.bundle.js  259.4b4fbb95.iframe.bundle.js.LICENSE.txt  259.4b4fbb95.iframe.bundle.js.map  287.d4d8524a.iframe.bundle.js  (+296 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-deploy-storybook.yml  build.yml  github-actions-demo.yml  new-workflow.yml  pr-preview-workflow.yml  pr-workflow.yml
.storybook/: main.cjs  main.js  manager.js  preview-head.html  preview.js  tsconfig.json
.storybook/sandbox/: sandbox-utils.ts
.storybook/source-code-addon/: manager.js  source-code.css
apps/sam-design-system-site/: .browserslistrc  jest.config.js  karma.conf.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  tslint.json
apps/sam-design-system-site-e2e/: cypress.json  tsconfig.e2e.json  tsconfig.json
apps/server/: README.md  tsconfig.json  tsconfig.spec.json
documentation/: changelog.html  contributing.html  dependencies.html  index.html  modules.html  overview.html
documentation/classes/: FooterLink.html  FooterLinkSection.html  FooterModel.html  HeaderHome.html  HeaderNavigationLink.html  HeaderSecondaryLink.html  KeyHelper.html  NavigationHelper.html  NavigationLink.html  PaginationConfigurationModel.html  PaginationModel.html  SDSAutocompleteSearchConfiguration.html  SDSAutocompletelConfiguration.html  SDSHiercarchicalServiceSearchItem.html  SDSSelectedItemModel.html  SDSSelectedItemModelHelper.html  SDSSelectedResultConfiguration.html  SdsDialogConfig.html  SdsDialogRef.html  SideNavigationModel.html
documentation/components/: PaginationComponent.html  SDSAutocompleteComponent.html  SDSAutocompleteSearchComponent.html  SDSSelectedResultComponent.html  SdsAccordionItemComponent.html  SdsAccordionItemHeaderComponent.html  SdsDialogContainerComponent.html  SdsFooterComponent.html  SdsHeaderComponent.html  SdsMenuComponent.html  SdsMenuHeaderComponent.html  SdsMenuItemComponent.html  SdsPageComponent.html  SdsPageOptionsComponent.html  SdsSearchComponent.html  SdsSearchResultListComponent.html  SdsSideNavigationComponent.html  SdsToolbarComponent.html  SdsToolbarHeaderComponent.html  SdsTopBannerComponent.html  SdsTruncatedTextContainerComponent.html  SdsVideoPlayerComponent.html
documentation/directives/: CollapseDirective.html  ExternalLinkDirective.html  SDSClickOutsideDirective.html  SDSTabOutsideDirective.html  SdsAccordionDirective.html  SdsAccordionItemContentDirective.html  SdsDialogActionsDirective.html  SdsDialogCloseDirective.html  SdsDialogContentDirective.html  SdsDialogSubtitleDirective.html  SdsDialogTitleDirective.html  SdsMenuTriggerForDirective.html  SdsObserveWidthDirective.html  SdsPopupDirective.html  SdsToolbarExpandDirective.html  SdsTruncateTextByLineDirective.html
documentation/injectables/: SdsDialogService.html
documentation/interfaces/: DialogPosition.html  FooterLogo.html  HeaderModel.html  INavigationLink.html  InitPxVideoConfig.html  SDSAutocompleteServiceInterface.html  SDSHiercarchicalServiceResult.html  SdsAccordionBase.html  SdsMenuInterface.html  SdsTruncateTextData.html  Selectable.html  VPInterface.html
documentation/js/: menu-wc.js
documentation/miscellaneous/: enumerations.html  functions.html  typealiases.html  variables.html
documentation/modules/: PaginationModule.html  SDSClickOutsideModule.html  SdsAccordionModule.html  SdsMenuModule.html  (+18 more)
guides/: getting-started.md
misc/: generate-stackblitzes.ts  parse-demo.ts  tsconfig.json
scripts/: generate-docs.ts
src/: BUILD.bazel  module-typings.d.ts
src/components/: BUILD.bazel  config.bzl  package.json  public-api.ts  tsconfig-build.json  tsconfig-tests.json  tsconfig.json
src/components/core/: BUILD.bazel  index.ts  public-api.ts  tsconfig-build.json
src/components/core/common-behaviors/: index.ts  nav-helper.spec.ts  nav-helper.ts  nav-model.ts
src/components/footer/: BUILD.bazel  footer-model.ts  footer-module.ts  footer.e2e.spec.ts  footer.md  footer.spec.ts  footer.ts  public-api.ts  tsconfig-build.json
src/dev-app/: BUILD.bazel  index.html  material.scss  system-config.js  theme.scss  tsconfig.json
src/dev-app/dev-app/: BUILD.bazel  dev-app-home.ts  dev-app-layout.html  dev-app-layout.scss  dev-app-layout.ts  routes.ts
src/dev-app/footer/: BUILD.bazel  footer-demo-module.ts  footer-demo.html  footer-demo.ts
src/examples/: BUILD.bazel  example-module.ts  package.json  tsconfig-build.json
src/examples/components/footer/: module.ts
src/sds-examples/components/footer/: BUILD.bazel
src/sds-examples/components/footer/overview/: footer-overview-example.ts
stories/: Collapse.stories.ts  Introduction.stories.mdx  Links.stories.ts  Page.stories.ts  Resources.stories.mdx  SamDesignSystem.stories.ts  Tabs.stories.ts  button.component.ts  links.component.ts  page.component.ts
tools/: defaults.bzl
(+7575 files in other folders)
