package(default_visibility = ["//visibility:public"])

load(
    "//src/components:config.bzl",
    "COMPONENTS_PACKAGES",
    "COMPONENTS_TARGETS",
)
load(
    "//:packages.bzl",
    "ROLLUP_GLOBALS",
)
load("//tools:defaults.bzl", "ng_module", "ng_package")
load("//tools:sass_bundle.bzl", "sass_bundle")

# Root "@gsa-sam/components" entry-point.
ng_module(
    name = "components",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@gsa-sam/components",
    deps = ["//src/components/%s" % p for p in COMPONENTS_PACKAGES] + [
        "@npm//@angular/forms",
    ],
)

filegroup(
    name = "overviews",
    srcs = ["//src/components/%s:overview" % name for name in COMPONENTS_PACKAGES],
)

# Creates the @gsa-sam/components package published to npm.
ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = ":public-api.ts",
    entry_point_name = "components",
    globals = ROLLUP_GLOBALS,
    # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
    # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
    # files.
    tags = ["manual"],
    deps = COMPONENTS_TARGETS,
)
