package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:defaults.bzl", "ng_module")
load("//tools/dev-server:index.bzl", "dev_server")

ng_module(
    name = "dev-app",
    srcs = [
        "dev-app.ts",
        "main.ts",
        "main-module.ts",
    ],
    deps = [
        "//src/dev-app/footer",
        "//src/dev-app/dev-app",
        "//src/material/core",
    ],
)

sass_binary(
    name = "theme",
    src = "theme.scss",
    include_paths = [
        "external/npm/node_modules",
    ],
    deps = [
        "//src/material-experimental/mdc-theming:all_themes",
        "//src/material-experimental/mdc-typography:all_typography",
        "//src/material-experimental/popover-edit:popover_edit_scss_lib",
        "//src/material/core:all_themes",
    ],
)

dev_server(
    name = "devserver",
    srcs = [
        "favicon.ico",
        "index.html",
        "system-config.js",
        "system-rxjs-operators.js",
        ":theme",
        "//src/dev-app/icon:icon_demo_assets",

        "@npm//:node_modules/@angular/cdk/bundles/cdk.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-a11y.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-overlay.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-platform.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-scrolling.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-coercion.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-collections.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-keycodes.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-bidi.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-portal.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-observers.umd.js",

        "@npm//:node_modules/@material/animation/dist/mdc.animation.js",
        "@npm//:node_modules/@material/auto-init/dist/mdc.autoInit.js",
        "@npm//:node_modules/@material/base/dist/mdc.base.js",
        "@npm//:node_modules/@material/checkbox/dist/mdc.checkbox.js",
        "@npm//:node_modules/@material/chips/dist/mdc.chips.js",
        "@npm//:node_modules/@material/dialog/dist/mdc.dialog.js",
        "@npm//:node_modules/@material/dom/dist/mdc.dom.js",
        "@npm//:node_modules/@material/drawer/dist/mdc.drawer.js",
        "@npm//:node_modules/@material/floating-label/dist/mdc.floatingLabel.js",
        "@npm//:node_modules/@material/form-field/dist/mdc.formField.js",
        "@npm//:node_modules/@material/grid-list/dist/mdc.gridList.js",
        "@npm//:node_modules/@material/icon-button/dist/mdc.iconButton.js",
        "@npm//:node_modules/@material/line-ripple/dist/mdc.lineRipple.js",
        "@npm//:node_modules/@material/linear-progress/dist/mdc.linearProgress.js",
        "@npm//:node_modules/@material/list/dist/mdc.list.js",
        "@npm//:node_modules/@material/menu-surface/dist/mdc.menuSurface.js",
        "@npm//:node_modules/@material/menu/dist/mdc.menu.js",
        "@npm//:node_modules/@material/notched-outline/dist/mdc.notchedOutline.js",
        "@npm//:node_modules/@material/radio/dist/mdc.radio.js",
        "@npm//:node_modules/@material/ripple/dist/mdc.ripple.js",
        "@npm//:node_modules/@material/select/dist/mdc.select.js",
        "@npm//:node_modules/@material/slider/dist/mdc.slider.js",
        "@npm//:node_modules/@material/snackbar/dist/mdc.snackbar.js",
        "@npm//:node_modules/@material/switch/dist/mdc.switch.js",
        "@npm//:node_modules/@material/tab-bar/dist/mdc.tabBar.js",
        "@npm//:node_modules/@material/tab-indicator/dist/mdc.tabIndicator.js",
        "@npm//:node_modules/@material/tab-scroller/dist/mdc.tabScroller.js",
        "@npm//:node_modules/@material/tab/dist/mdc.tab.js",
        "@npm//:node_modules/@material/textfield/dist/mdc.textfield.js",
        "@npm//:node_modules/@material/top-app-bar/dist/mdc.topAppBar.js",
        "@npm//:node_modules/@webcomponents/custom-elements/custom-elements.min.js",

        "@npm//:node_modules/core-js/client/core.js",
        "@npm//:node_modules/hammerjs/hammer.min.js",
        "@npm//:node_modules/moment/min/moment-with-locales.min.js",
        "@npm//:node_modules/rxjs/bundles/rxjs.umd.min.js",
        "@npm//:node_modules/systemjs/dist/system.js",
        "@npm//:node_modules/tslib/tslib.js",
        "@npm//:node_modules/zone.js/dist/zone.js",
    ],
    additional_root_paths = [
        "npm/node_modules",
    ],
    deps = [
        ":dev-app",
    ],
)
