package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")
load("//tools:defaults.bzl", "ng_module")
load("//tools/dev-server:index.bzl", "dev_server")

ng_module(
    name = "dev-app",
    srcs = [
        "dev-app.ts",
        "main.ts",
        "main-module.ts",
    ],
    deps = [
        "//src/dev-app/footer",
        "//src/dev-app/dev-app",
        "//src/material/core",
    ],
)

sass_library(
    name = "angular_material_theming",
    srcs = [
        "@npm//:node_modules/@angular/material/_theming.scss",
    ]
)

sass_binary(
    name = "material",
    src = "material.scss",
    include_paths = [
        "external/npm/node_modules",
    ],
    deps = [
        ":angular_material_theming",
    ]
)

sass_binary(
    name = "theme",
    src = "theme.scss",
    include_paths = [
        "external/npm/node_modules",
    ]
)

dev_server(
    name = "devserver",
    srcs = [
        "favicon.ico",
        "index.html",
        "system-config.js",
        "system-rxjs-operators.js",
        ":theme",
        ":material",
        
        # TODO: Only import fonts an images
        "@npm//@gsa-sam/sam-styles:sam-styles__files",

        # CDK
        "@npm//:node_modules/@angular/cdk/bundles/cdk.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-a11y.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-overlay.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-platform.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-scrolling.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-coercion.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-collections.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-keycodes.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-bidi.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-portal.umd.js",
        "@npm//:node_modules/@angular/cdk/bundles/cdk-observers.umd.js",

        # MATERIAL
        "@npm//:node_modules/@angular/material/bundles/material-core.umd.js",
        "@npm//:node_modules/@angular/material/bundles/material-button.umd.js",
        "@npm//:node_modules/@angular/material/bundles/material-icon.umd.js",
        "@npm//:node_modules/@angular/material/bundles/material-divider.umd.js",
        "@npm//:node_modules/@angular/material/bundles/material-list.umd.js",
        "@npm//:node_modules/@angular/material/bundles/material-sidenav.umd.js",
        "@npm//:node_modules/@angular/material/bundles/material-toolbar.umd.js",

        "@npm//:node_modules/@webcomponents/custom-elements/custom-elements.min.js",

        "@npm//:node_modules/core-js/client/core.js",
        "@npm//:node_modules/hammerjs/hammer.min.js",
        "@npm//:node_modules/moment/min/moment-with-locales.min.js",
        "@npm//:node_modules/rxjs/bundles/rxjs.umd.min.js",
        "@npm//:node_modules/systemjs/dist/system.js",
        "@npm//:node_modules/tslib/tslib.js",
        "@npm//:node_modules/zone.js/dist/zone.js",
    ],
    additional_root_paths = [
        "npm/node_modules",
    ],
    deps = [
        ":dev-app",
    ],
)
