package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:defaults.bzl", "ng_module")

ng_module(
    name = "footer",
    srcs = glob(["**/*.ts"]),
    assets = [
        "footer-demo.html",
        ":footer_demo_scss",
    ],
    deps = [
        "//src/components/footer",
        "@npm//@angular/forms",
        "@npm//@angular/router",
    ],
)

sass_binary(
    name = "footer_demo_scss",
    src = "footer-demo.scss",
)
